@@ -78,6 +78,15 @@ X509V3_EXT_METHOD v3_info =
 0,0,
 NULL};
 
+X509V3_EXT_METHOD v3_sinfo =
+{ NID_sinfo_access, X509V3_EXT_MULTILINE, ASN1_ITEM_ref(AUTHORITY_INFO_ACCESS),
+0,0,0,0,
+0,0,
+(X509V3_EXT_I2V)i2v_AUTHORITY_INFO_ACCESS,
+(X509V3_EXT_V2I)v2i_AUTHORITY_INFO_ACCESS,
+0,0,
+NULL};
+
 ASN1_SEQUENCE(ACCESS_DESCRIPTION) = {
 	ASN1_SIMPLE(ACCESS_DESCRIPTION, method, ASN1_OBJECT),
 	ASN1_SIMPLE(ACCESS_DESCRIPTION, location, GENERAL_NAME)
