@@ -12,6 +12,9 @@
          *) applies to 0.9.6a/0.9.6b/0.9.6c and 0.9.7
          +) applies to 0.9.7 only
 
+  +) Add support for Subject Information Access extension.
+     [Peter Sylvester <Peter.Sylvester@EdelWeb.fr>]
+
   +) Make BUF_MEM_grow() behaviour more consistent: Initialise to zero
      additional bytes when new memory had to be allocated, not just
      when reusing an existing buffer.
